fix(Party): :bug: Add overflow hidden to margin-bottom-medium class to prevent layout issues

--- a/src/components/party/PartyTimeline/PartyTimeline.module.scss
+++ b/src/components/party/PartyTimeline/PartyTimeline.module.scss
@@ -108,6 +108,7 @@
     
       .margin-bottom-medium {
         margin-bottom: 32px;
+        overflow: hidden;
         
         h3 {
           @include font-size(20);
